<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="practice.interview.weatherapplication.ActivityAddLocation">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/primary_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_add_city_title"
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_city_or_zip_title" />

        <TextView
            android:id="@+id/activity_instructions"
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fragment_instructions_text_size"
            android:layout_marginBottom="@dimen/primary_margin"
            android:text="@string/instructions" />

        <TextView
            android:id="@+id/activity_add_city_text_view"
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_city" />

        <EditText
            android:id="@+id/activity_add_city_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/activity_add_zip_text_view"
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_zip" />

        <EditText
            android:id="@+id/activity_add_zip_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number" />

        <Button
            android:id="@+id/activity_add_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/primary_margin"
            android:background="@color/colorAccent"
            android:text="@string/add"
            android:textColor="@android:color/white" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
